# cmp-test-suite-update-code

./: .dockerignore  .gitignore  CLAUDE.md  MISSING_SUPPORT_TEMPLATE.md  Makefile  PR_root_ca_key_usage.md  REFERENCES.md  SERVER_TEST_COVERAGE.md  about_suite.md  generate_xmss_keys.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_issuing_cert_rfc9883.py  test_mock_ca_issuing_csr_rfc9883.py  test_stfl.py  tpm2.0_AttestationBundle.der
.github/: dependabot.yml
.github/workflows/: after_pull_request.yml  build_base_images.yml  build_docker_images.yml  build_suite_image.yml  check_quality.yml  pre-release.yml  release.yml  run_against_mock_ca.yml  workflow_after_merge.yml
config/: cloudpki.robot  ejbca.robot  local.robot  localak.robot  mock_ca.robot  playground.robot
data/dockerfiles/: Dockerfile.base  Dockerfile.mock_ca  Dockerfile.tests
data/keys/: client-key-ec.pem  client-key-x25519.pem  client-x448-key.pem  client_dh_key.pem  private-dh-key.pem  private-key-composite-kem-frodokem-976-aes-rsa2048-seed.pem  private-key-composite-kem-frodokem-976-aes-x25519-seed.pem  private-key-composite-kem-frodokem-976-shake-x25519-seed.pem  private-key-composite-kem-ml-kem-1024-x25519-seed.pem  private-key-composite-kem-ml-kem-1024-x448-seed.pem  private-key-composite-kem-ml-kem-768-rsa2048-seed.pem  private-key-composite-sig-ed448-ml-dsa-87.pem  private-key-composite-sig-rsa2048-ml-dsa-44.pem  private-key-dsa.pem  private-key-ecdsa.pem  private-key-ed25519.pem  private-key-ed448.pem  private-key-frodokem-1344-aes-raw.pem  private-key-frodokem-1344-shake-raw.pem  private-key-frodokem-640-aes-raw.pem  private-key-frodokem-640-shake-raw.pem  private-key-frodokem-976-aes-raw.pem  private-key-frodokem-976-shake-raw.pem  private-key-mceliece-348864-raw.pem  private-key-mceliece-6960119-raw.pem  private-key-mceliece-8192128-raw.pem  private-key-ml-dsa-44-raw-old.pem  private-key-ml-dsa-44-raw.pem  private-key-ml-dsa-44-seed-old.pem  private-key-ml-dsa-44-seed.pem  private-key-ml-dsa-65-raw.pem  private-key-ml-dsa-65-seed.pem  private-key-ml-dsa-87-raw.pem  private-key-ml-dsa-87-seed.pem  private-key-ml-kem-1024-raw.pem  private-key-ml-kem-1024-seed.pem  private-key-ml-kem-512-raw.pem  private-key-ml-kem-512-seed.pem  private-key-ml-kem-768-raw-old.pem  private-key-ml-kem-768-raw.pem  (+25 more)
data/mock_ca/: device_cert_ecdsa_cert_chain.pem
mock_ca/: announcement_handler.py  attestation_verifier.py  ca_handler.py  cert_req_handler.py  client.py  db_config_vars.py  general_msg_handler.py  mock_fun.py  nested_handler.py  operation_dbs.py  prot_handler.py  rats_handler.py  remote_attestation_handler.py  rev_handler.py
pq_logic/: combined_factory.py  pq_verify_logic.py  tmp_oids.py
resources/: asn1_structures.py  asn1utils.py  attest_structures.py  ca_kga_logic.py  ca_ra_utils.py  cert_linters_utils.py  certbuildutils.py  certextractutils.py  certutils.py  checkutils.py  cmputils.py  compareutils.py  convertutils.py  cryptoutils.py  envdatautils.py  exceptions.py  extra_issuing_logic.py  general_msg_utils.py  httputils.py  keyutils.py  keywords.resource  oid_mapping.py  oidutils.py  other_cert_utils.py  prepare_alg_ids.py  prepareutils.py  profile_config.py  protectionutils.py  remote_attestation_utils.py  security_utils.py  setup_keywords.resource
scripts/: decrypt_keys.py  docker_entrypoint.py  generate_alg_test_cases.py  generate_gen_msg_test_cases.py  generate_pki_prot_tests.py  generate_pkiheader_verbose_tests.py  run_openssl.py  test_openssl_pqc.py  verbose_test_dataclasses.py  vis_pqc_verify.py
tests/: basic.robot  extra_issuing.robot  lwcmp.robot  pki_mgmt_entity_op.robot  support_messages.robot  verbose_gen_msg_checks.robot  verbose_pkiheader_tests.robot
tests_mock_ca/: migration.robot  remote_attestation_nonce_tests.robot
tests_pq_and_hybrid/: kem_alg.robot  pq_stateful_sig_alg.robot
unit_tests/: test_cryptoutils.py  test_hybrid_key_gen_by_name.py  utils_for_test.py
(+468 files in other folders)
